src/test/ui/associated-types/defaults-wf.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/defaults-wf.rs:7:5
   |
LL |     type Ty = Vec<[u8]>;
   |     ^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   | 
  ::: $SRC_DIR/liballoc/vec.rs:LL:COL
   |
LL | pub struct Vec<T> {
   |                - required by this bound in `std::vec::Vec`
   |
   = help: the trait `std::marker::Sized` is not implemented for `[u8]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
